Primeiro teste [Abrir google e verificar título da página]

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.leocaliban.curso.testes.selenium</groupId>
+	<groupId>com.leocaliban.cursos.testes.selenium</groupId>
 	<artifactId>CursoSelenium</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
@@ -11,7 +11,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.4.0</version>
+			<version>3.11.0</version>
 		</dependency>
 	</dependencies>
 	
